--- a/metadata.yaml
+++ b/metadata.yaml
@@ -45,5 +45,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Western stories'
+- GITenberg
 title: The Uphill Climb
 url: http://www.gutenberg.org/ebooks/14456
